# SoftwareTesting

./: .clang-tidy  CMakeLists.txt  Triangle.cpp  Triangle.h  TriangleTest.cpp  main.cpp  test.cpp  yesterdate.cpp  yesterdate.h
lab1/: CMakeLists.txt  Triangle.cpp  Triangle.h  main.cpp
lab4/: .clang-tidy  CMakeLists.txt  test.cpp  yesterdate.cpp  yesterdate.h
